initial code for generating and parsing smb_cmd.log

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -1755,11 +1755,46 @@ filter {
       add_field =>  { "[zeek_cols][service]" => "sip" }
     }
 
+  } else if ([source] == "smb_cmd") {
+    #############################################################################################################################
+    # smb_cmd.log
+    # https://docs.zeek.org/en/stable/scripts/base/protocols/smb/main.zeek.html#type-SMB::CmdInfo
+    #
+    # note that smb_cmd.referenced_file is exactly the same structure as the log line for smb_files. later on it will be
+    # merged up as its own top-level entity so I don't have to duplicate the parsing effort below
+
+    dissect {
+      id => "dissect_zeek_smb_cmd"
+      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+      mapping => {
+        "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][orig_p]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][resp_p]}	%{[zeek_cols][command]}	%{[zeek_cols][sub_command]}	%{[zeek_cols][argument]}	%{[zeek_cols][status]}	%{[zeek_cols][rtt]}	%{[zeek_cols][version]}	%{[zeek_cols][user]}	%{[zeek_cols][tree]}	%{[zeek_cols][tree_service]}	%{[zeek_cols][referenced_file][ts]}	%{[zeek_cols][referenced_file][uid]}	%{[zeek_cols][referenced_file][orig_h]}	%{[zeek_cols][referenced_file][orig_p]}	%{[zeek_cols][referenced_file][resp_h]}	%{[zeek_cols][referenced_file][resp_p]}	%{[zeek_cols][referenced_file][fuid]}	%{[zeek_cols][referenced_file][action]}	%{[zeek_cols][referenced_file][path]}	%{[zeek_cols][referenced_file][name]}	%{[zeek_cols][referenced_file][size]}	%{[zeek_cols][referenced_file][prev_name]}	%{[zeek_cols][referenced_file][times_modified]}	%{[zeek_cols][referenced_file][times_accessed]}	%{[zeek_cols][referenced_file][times_created]}	%{[zeek_cols][referenced_file][times_changed]}	%{[zeek_cols][referenced_file][data_offset_req]}	%{[zeek_cols][referenced_file][data_len_req]}	%{[zeek_cols][referenced_file][data_len_rsp]}"
+      }
+    }
+    if ("_dissectfailure" in [tags]) {
+      mutate {
+        id => "mutate_split_zeek_smb_cmd"
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        split => { "[message]" => "	" }
+      }
+      ruby {
+        id => "ruby_zip_zeek_smb_cmd"
+        init => "$zeek_smb_cmd_field_names = [ 'ts', 'uid', 'orig_h', 'orig_p', 'resp_h', 'resp_p', 'command', 'sub_command', 'argument', 'status', 'rtt', 'version', 'user', 'tree', 'tree_service', 'referenced_file.ts', 'referenced_file.uid', 'referenced_file.orig_h', 'referenced_file.orig_p', 'referenced_file.resp_h', 'referenced_file.resp_p', 'referenced_file.fuid', 'referenced_file.action', 'referenced_file.path', 'referenced_file.name', 'referenced_file.size', 'referenced_file.prev_name', 'referenced_file.times_modified', 'referenced_file.times_accessed', 'referenced_file.times_created', 'referenced_file.times_changed', 'referenced_file.data_offset_req', 'referenced_file.data_len_req', 'referenced_file.data_len_rsp' ]"
+        code => "event.set('[zeek_cols]', $zeek_smb_cmd_field_names.zip(event.get('[message]')).to_h)"
+      }
+    }
+
+    mutate {
+      id => "mutate_add_fields_zeek_smb_cmd"
+      add_field => {
+        "[zeek_cols][proto]" => "tcp"
+        "[zeek_cols][service]" => "smb"
+      }
+    }
+
   } else if ([source] == "smb_files") {
     #############################################################################################################################
     # smb_files.log
     # https://docs.zeek.org/en/stable/scripts/base/protocols/smb/main.zeek.html#type-SMB::FileInfo
-    # todo: also smb_cmd.log?
 
     if ([@metadata][zeek_fields_bitmap] and [@metadata][zeek_fields_bitmap_version]) {
 
@@ -2374,7 +2409,7 @@ filter {
   } # if / else if for source type (conn.log, dns.log, etc.)
 
   if ([zeek_cols]) {
-    # remove unset (-) or "(empty)" field values
+    # remove unset (-) or "(empty)" top-level field values
     ruby {
       id => "ruby_zeek_remove_empty_values"
       code => "
@@ -3400,7 +3435,7 @@ filter {
       mutate { id => "mutate_merge_field_zeek_service_version_rdp"
                merge => { "[zeek][service_version]" => "[zeek_rdp][client_build]" } }
       mutate { id => "mutate_gsub_field_zeek_service_version_rdp"
-               gsub => [ "[zeek][service_version]", "RDP ", "" ] }
+               gsub => [ "[zeek][service_version]", "^RDP ", "" ] }
     }
 
   } else if ([source] == "rfb") {
@@ -3544,102 +3579,151 @@ filter {
     mutate { id => "mutate_split_zeek_sip_response_path"
              split => { "[zeek_sip][response_path]" => "," } }
 
-  } else if ([source] == "smb_files") {
+
+  } else if ([source] == "smb_cmd") or ([source] == "smb_files") {
     #############################################################################################################################
-    # smb_files.log specific logic
+    # smb_cmd.log and smb_files.log specific logic
+    # note that smb_cmd.referenced_file is exactly the same structure as the log line for smb_files, which is why I've combined
+    # the logic here to avoid duplication
 
-    # collect all FUIDs under the parent [zeek][fuid] array
-    if ([zeek_smb_files][fuid]) {
-      mutate { id => "mutate_split_zeek_smb_files_fuid"
-               split => { "[zeek_smb_files][fuid]" => "," } }
-      mutate { id => "mutate_merge_zeek_smb_files_fuid"
-               merge => { "[zeek][fuid]" => "[zeek_smb_files][fuid]" } }
-    }
-    # collect all filenames under the parent [zeek][filename] array
-    if ([zeek_smb_files][name]) { mutate { id => "mutate_merge_zeek_smb_files_name_to_filename"
-                                          merge => { "[zeek][filename]" => "[zeek_smb_files][name]" } } }
-    if ([zeek_smb_files][prev_name]) { mutate { id => "mutate_merge_zeek_smb_files_prev_name_to_filename"
-                                               merge => { "[zeek][filename]" => "[zeek_smb_files][prev_name]" } } }
+    if ([zeek_smb_cmd]) {
 
-    if ([zeek][filename]) {
-      mutate { id => "mutate_merge_zeek_smb_files_filename"
-               merge => { "[smb][filename]" => "[zeek][filename]" } }
-      ruby {
-        id => "ruby_zeek_smb_files_filenameCnt"
-        code => "event.set('[smb][filenameCnt]', event.get('[smb][filename]').length)"
+      if ([zeek_smb_cmd][version]) {
+        # collect protocol version under the parent zeek.service_version array
+        mutate { id => "mutate_merge_field_zeek_service_version_smb_cmd"
+                 merge => { "[zeek][service_version]" => "[zeek_smb_cmd][version]" } }
+        mutate { id => "mutate_gsub_field_zeek_service_version_smb_cmd"
+                 gsub => [ "[zeek][service_version]", "^SMB", "" ] }
       }
-    }
 
-    if ([zeek_smb_files][path]) {
-      grok {
-        id => "grok_zeek_smb_files_path"
-        match => { "[zeek_smb_files][path]" => [ "^%{SPACE}[\\\/]+%{DATA:[@metadata][smb_host]}[\\\/]+%{DATA:[@metadata][smb_share]}(?:[\\\/]+%{GREEDYDATA:[@metadata][smb_path]})?$" ] }
-      }
-      if ([@metadata][smb_host]) {
-        mutate { id => "mutate_merge_zeek_smb_files_host"
-                 merge => { "[smb][host]" => "[@metadata][smb_host]" } }
+      if ([zeek_smb_cmd][referenced_file]) {
+
+        # move "up" referenced_file to its own smb_files top-level entity
+        mutate {
+          id => "mutate_rename_zeek_zeek_smb_cmd_referenced_file"
+          rename => { "[zeek_smb_cmd][referenced_file]" => "[zeek_smb_files]" }
+        }
+
+        # remove unset (-) or "(empty)" referenced_file (now zeek_smb_files) subfield values
         ruby {
-          id => "ruby_zeek_smb_files_hostCnt"
-          code => "event.set('[smb][hostCnt]', event.get('[smb][host]').length)"
+          id => "ruby_zeek_remove_empty_smb_cmd_referenced_file_values"
+          code => "
+            fieldsHash = event.get('[zeek_smb_files]').to_hash
+            fieldsHash.delete_if{|_,v| ((v == nil) or (v == '') or (v == '-') or (v == '(empty)'))}
+            event.set('[zeek_smb_files]', fieldsHash)
+          "
+        }
+
+        # this timestamp conversion would have happened originally had this been its own line from smb_files
+        if ([zeek_smb_files][ts]) {
+          # convert @timestamp to UNIX to use native kibana features
+          date {
+            id => "date_zeek_smb_files_ts"
+            match => [ "[zeek_smb_files][ts]", "UNIX" ]
+            target => "[@metadata][zeek_smb_files_ts]"
+          }
+          mutate { id => "mutate_replace_zeek_smb_files_ts"
+                   replace => { "[zeek_smb_files][ts]" => "%{[@metadata][zeek_smb_files_ts]}" } }
+        } # if ([zeek_smb_files][ts])
+
+      } # if ([zeek_smb_cmd][referenced_file])
+    } # if ([zeek_smb_cmd])
+
+    # this should now apply to either lines from smb_files.log or smb_cmd.referenced_file
+    if ([zeek_smb_files]) {
+
+      # collect all FUIDs under the parent [zeek][fuid] array
+      if ([zeek_smb_files][fuid]) {
+        mutate { id => "mutate_split_zeek_smb_files_fuid"
+                 split => { "[zeek_smb_files][fuid]" => "," } }
+        mutate { id => "mutate_merge_zeek_smb_files_fuid"
+                 merge => { "[zeek][fuid]" => "[zeek_smb_files][fuid]" } }
+      }
+      # collect all filenames under the parent [zeek][filename] array
+      if ([zeek_smb_files][name]) { mutate { id => "mutate_merge_zeek_smb_files_name_to_filename"
+                                            merge => { "[zeek][filename]" => "[zeek_smb_files][name]" } } }
+      if ([zeek_smb_files][prev_name]) { mutate { id => "mutate_merge_zeek_smb_files_prev_name_to_filename"
+                                                 merge => { "[zeek][filename]" => "[zeek_smb_files][prev_name]" } } }
+
+      if ([zeek][filename]) {
+        mutate { id => "mutate_merge_zeek_smb_files_filename"
+                 merge => { "[smb][filename]" => "[zeek][filename]" } }
+        ruby {
+          id => "ruby_zeek_smb_files_filenameCnt"
+          code => "event.set('[smb][filenameCnt]', event.get('[smb][filename]').length)"
         }
       }
-      if ([@metadata][smb_share]) {
-        mutate { id => "mutate_merge_zeek_smb_files_share"
-                 merge => { "[smb][share]" => "[@metadata][smb_share]" } }
-        ruby {
-          id => "ruby_zeek_smb_files_shareCnt"
-          code => "event.set('[smb][shareCnt]', event.get('[smb][share]').length)"
+
+      if ([zeek_smb_files][path]) {
+        grok {
+          id => "grok_zeek_smb_files_path"
+          match => { "[zeek_smb_files][path]" => [ "^%{SPACE}[\\\/]+%{DATA:[@metadata][smb_host]}[\\\/]+%{DATA:[@metadata][smb_share]}(?:[\\\/]+%{GREEDYDATA:[@metadata][smb_path]})?$" ] }
+        }
+        if ([@metadata][smb_host]) {
+          mutate { id => "mutate_merge_zeek_smb_files_host"
+                   merge => { "[smb][host]" => "[@metadata][smb_host]" } }
+          ruby {
+            id => "ruby_zeek_smb_files_hostCnt"
+            code => "event.set('[smb][hostCnt]', event.get('[smb][host]').length)"
+          }
+        }
+        if ([@metadata][smb_share]) {
+          mutate { id => "mutate_merge_zeek_smb_files_share"
+                   merge => { "[smb][share]" => "[@metadata][smb_share]" } }
+          ruby {
+            id => "ruby_zeek_smb_files_shareCnt"
+            code => "event.set('[smb][shareCnt]', event.get('[smb][share]').length)"
+          }
         }
       }
-    }
 
-    # convert times to something more usable
-    if ([zeek_smb_files][times_modified]) {
-      date {
-        id => "date_zeek_smb_files_times_modified"
-        match => [ "[zeek_smb_files][times_modified]", "UNIX" ]
-        target => "[@metadata][smb_time_mod]"
+      # convert times to something more usable
+      if ([zeek_smb_files][times_modified]) {
+        date {
+          id => "date_zeek_smb_files_times_modified"
+          match => [ "[zeek_smb_files][times_modified]", "UNIX" ]
+          target => "[@metadata][smb_time_mod]"
+        }
+        if ([@metadata][smb_time_mod]) { mutate { id => "mutate_replace_zeek_smb_files_times_modified"
+                                           replace => { "[zeek_smb_files][times_modified]" => "%{[@metadata][smb_time_mod]}" } } }
       }
-      if ([@metadata][smb_time_mod]) { mutate { id => "mutate_replace_zeek_smb_files_times_modified"
-                                         replace => { "[zeek_smb_files][times_modified]" => "%{[@metadata][smb_time_mod]}" } } }
-    }
-    if ([zeek_smb_files][times_accessed]) {
-      date {
-        id => "date_zeek_smb_files_times_accessed"
-        match => [ "[zeek_smb_files][times_accessed]", "UNIX" ]
-        target => "[@metadata][smb_time_acc]"
+      if ([zeek_smb_files][times_accessed]) {
+        date {
+          id => "date_zeek_smb_files_times_accessed"
+          match => [ "[zeek_smb_files][times_accessed]", "UNIX" ]
+          target => "[@metadata][smb_time_acc]"
+        }
+        if ([@metadata][smb_time_acc]) { mutate { id => "mutate_replace_zeek_smb_files_times_accessed"
+                                           replace => { "[zeek_smb_files][times_accessed]" => "%{[@metadata][smb_time_acc]}" } } }
       }
-      if ([@metadata][smb_time_acc]) { mutate { id => "mutate_replace_zeek_smb_files_times_accessed"
-                                         replace => { "[zeek_smb_files][times_accessed]" => "%{[@metadata][smb_time_acc]}" } } }
-    }
-    if ([zeek_smb_files][times_created]) {
-      date {
-        id => "date_zeek_smb_files_times_created"
-        match => [ "[zeek_smb_files][times_created]", "UNIX" ]
-        target => "[@metadata][smb_time_cre]"
+      if ([zeek_smb_files][times_created]) {
+        date {
+          id => "date_zeek_smb_files_times_created"
+          match => [ "[zeek_smb_files][times_created]", "UNIX" ]
+          target => "[@metadata][smb_time_cre]"
+        }
+        if ([@metadata][smb_time_cre]) { mutate { id => "mutate_replace_zeek_smb_files_times_created"
+                                           replace => { "[zeek_smb_files][times_created]" => "%{[@metadata][smb_time_cre]}" } } }
       }
-      if ([@metadata][smb_time_cre]) { mutate { id => "mutate_replace_zeek_smb_files_times_created"
-                                         replace => { "[zeek_smb_files][times_created]" => "%{[@metadata][smb_time_cre]}" } } }
-    }
-    if ([zeek_smb_files][times_changed]) {
-      date {
-        id => "date_zeek_smb_files_times_changed"
-        match => [ "[zeek_smb_files][times_changed]", "UNIX" ]
-        target => "[@metadata][smb_time_cha]"
+      if ([zeek_smb_files][times_changed]) {
+        date {
+          id => "date_zeek_smb_files_times_changed"
+          match => [ "[zeek_smb_files][times_changed]", "UNIX" ]
+          target => "[@metadata][smb_time_cha]"
+        }
+        if ([@metadata][smb_time_cha]) { mutate { id => "mutate_replace_zeek_smb_files_times_changed"
+                                           replace => { "[zeek_smb_files][times_changed]" => "%{[@metadata][smb_time_cha]}" } } }
       }
-      if ([@metadata][smb_time_cha]) { mutate { id => "mutate_replace_zeek_smb_files_times_changed"
-                                         replace => { "[zeek_smb_files][times_changed]" => "%{[@metadata][smb_time_cha]}" } } }
-    }
 
-    mutate {
-      id => "mutate_zeek_smb_files_convert"
-      convert => {
-        "[zeek_smb_files][data_offset_req]" => "integer"
-        "[zeek_smb_files][data_len_req]" => "integer"
-        "[zeek_smb_files][data_len_rsp]" => "integer"
-
+      mutate {
+        id => "mutate_zeek_smb_files_convert"
+        convert => {
+          "[zeek_smb_files][data_offset_req]" => "integer"
+          "[zeek_smb_files][data_len_req]" => "integer"
+          "[zeek_smb_files][data_len_rsp]" => "integer"
+        }
       }
-    }
+    } # if ([zeek_smb_files]) {
 
   } else if ([source] == "smb_mapping") {
     #############################################################################################################################
@@ -4183,6 +4267,12 @@ filter {
   # rename source (eg., conn, ssh, etc.) to zeek.logType
   mutate { id => "mutate_rename_zeek_logType"
            rename => { "[source]" => "[zeek][logType]" } }
+
+  # kind of a unique case, smb_cmd can also be smb_files
+  if ([zeek][logType] == "smb_cmd") and ([zeek_smb_files]) {
+    mutate { id => "mutate_merge_zeek_smb_cmd_and_smb_files_logType"
+             merge => { "[zeek][logType]" => "smb_files" } }
+  }
 
   # get counts for some arrays that each log type may contribute to individually
   if ([protocol]) {
