initial code for generating and parsing smb_cmd.log

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -2670,6 +2670,17 @@ filter {
       #}
     }
 
+  } else if ([source] == "dce_rpc") {
+    #############################################################################################################################
+    # dce_rpc.log specific logic
+
+    mutate {
+      id => "mutate_zeek_dce_rpc_convert"
+      convert => {
+        "[zeek_dce_rpc][rtt]" => "float"
+      }
+    }
+
   } else if ([source] == "dhcp") {
     #############################################################################################################################
     # dhcp.log specific logic
@@ -2791,6 +2802,13 @@ filter {
         code => "event.set('[dns][ipCnt]', event.get('[dns][ip]').length)"
       }
     } # if([dns][ip])
+
+    mutate {
+      id => "mutate_zeek_dns_convert"
+      convert => {
+        "[zeek_dns][rtt]" => "float"
+      }
+    }
 
   } else if ([source] == "files") {
     #############################################################################################################################
@@ -3627,6 +3645,14 @@ filter {
         } # if ([zeek_smb_files][ts])
 
       } # if ([zeek_smb_cmd][referenced_file])
+
+      mutate {
+        id => "mutate_zeek_smb_cmd_convert"
+        convert => {
+          "[zeek_smb_cmd][rtt]" => "float"
+        }
+      }
+
     } # if ([zeek_smb_cmd])
 
     # this should now apply to either lines from smb_files.log or smb_cmd.referenced_file
@@ -4270,8 +4296,11 @@ filter {
 
   # kind of a unique case, smb_cmd can also be smb_files
   if ([zeek][logType] == "smb_cmd") and ([zeek_smb_files]) {
+    # seriously I do not get how merge works, why can't I just merge the string literal?
+    mutate { id => "mutate_add_field_zeek_tmp_logtype"
+             add_field => { "[@metadata][tmpLogType]" => "smb_files" } }
     mutate { id => "mutate_merge_zeek_smb_cmd_and_smb_files_logType"
-             merge => { "[zeek][logType]" => "smb_files" } }
+             merge => { "[zeek][logType]" => "[@metadata][tmpLogType]" } }
   }
 
   # get counts for some arrays that each log type may contribute to individually
