more work on smb command mapping

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3741,6 +3741,9 @@ filter {
                                            replace => { "[zeek_smb_files][times_changed]" => "%{[@metadata][smb_time_cha]}" } } }
       }
 
+      mutate { id => "mutate_gsub_zeek_smb_files_action"
+               gsub => [ "[zeek_smb_files][action]", "^SMB::", "" ] }
+
       mutate {
         id => "mutate_zeek_smb_files_convert"
         convert => {
