more work on smb

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3646,6 +3646,10 @@ filter {
 
       } # if ([zeek_smb_cmd][referenced_file])
 
+      # normalize smb action/command
+      mutate { id => "mutate_merge_zeek_smb_cmd_command"
+               merge => { "[zeek_smb][action]" => "[zeek_smb_cmd][command]" } }
+
       mutate {
         id => "mutate_zeek_smb_cmd_convert"
         convert => {
@@ -3742,7 +3746,10 @@ filter {
       }
 
       mutate { id => "mutate_gsub_zeek_smb_files_action"
-               gsub => [ "[zeek_smb_files][action]", "^SMB::", "" ] }
+               gsub => [ "[zeek_smb_files][action]", "SMB::|FILE_", "" ] }
+      # normalize smb action/command
+      mutate { id => "mutate_merge_zeek_smb_files_action"
+               merge => { "[zeek_smb][action]" => "[zeek_smb_files][action]" } }
 
       mutate {
         id => "mutate_zeek_smb_files_convert"
@@ -3752,7 +3759,14 @@ filter {
           "[zeek_smb_files][data_len_rsp]" => "integer"
         }
       }
-    } # if ([zeek_smb_files]) {
+    } # if ([zeek_smb_files])
+
+    if ([zeek_smb][action]) {
+      ruby {
+        id => "ruby_zeek_smb_action"
+        code => "event.set('[zeek_smb][action]', event.get('[zeek_smb][action]').uniq)"
+      }
+    }
 
   } else if ([source] == "smb_mapping") {
     #############################################################################################################################
