--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -324,7 +324,7 @@ services:
       - ./pcap:/pcap
       - ./zeek-logs/upload:/zeek/upload
       - ./zeek-logs/extract_files:/zeek/extract_files
-      - ./zeek/config:/usr/share/zeek/site:ro
+      - ./zeek/config/local.zeek:/opt/zeek/share/zeek/site/local.zeek:ro
   file-monitor:
     build:
       context: .
