some field normalization for 2.0.0
- restored kibana swimlane visualization as it has been fixed for 7.5.x
- remove some unused fields from records (agent.ephemeral_id, input.type, path portion of log.file.path)
- remove "_jsonparsefailure" tag on cleanup
- change some places where we were doing calculations to get count values when we already know the count is "1"
- normalization of "action" or "command" values to "zeek.action" field
- normalization of mime type, file names, fuids, and service version

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -365,12 +365,20 @@ filter {
              add_field => { "[node]" => "logs" } }
   }
 
+  if ([log][file][path]) {
+    # trim path portion of log.file.path
+    mutate { id => "mutate_gsub_field_zeek_log_file_path"
+             gsub => [ "[log][file][path]", "^.*/", "" ] }
+  }
+
   # remove some useless beats-related fields
   mutate {
     id => "mutate_remove_field_beats_useless"
     remove_field => [
       "[beat]",
+      "[agent][ephemeral_id]",
       "[log][offset]",
+      "[input][type]",
       "[prospector]",
       "[message]"
     ]
