--- a/logstash/pipelines/enrichment/18_tags_finalize.conf
+++ b/logstash/pipelines/enrichment/18_tags_finalize.conf
@@ -5,6 +5,7 @@ filter {
   mutate { id => "mutate_enrichment_tags_remove"
            remove_tag => [ "beats_input_codec_plain_applied",
                            "_grokparsefailure",
+                           "_jsonparsefailure",
                            "_dissectfailure",
                            "_ouilookupfailure",
                            "_geoip_lookup_failure" ] }
