fixes to SMB action mapping

--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -139,19 +139,23 @@ filter {
     }
   }
 
-  if ([zeek_sip][method])                       { mutate { id => "mutate_merge_normalize_zeek_sip_method"
-                                                           merge => { "[zeek][action]" => "[zeek_sip][method]" } } }
-
-  if ([zeek_smb_cmd][command]) or ([zeek_smb_cmd][sub_command]) {
-    # concatenate command and sub_command
-    mutate { id => "mutate_add_field_zeek_smb_cmd_combined"
-             add_field => { "[@metadata][zeek_smb_cmd_combined]" => "%{[zeek_smb_cmd][command]}:%{[zeek_smb_cmd][sub_command]}" } }
-    mutate { id => "mutate_merge_normalize_zeek_smb_cmd_command"
-             merge => { "[zeek][action]" => "[@metadata][zeek_smb_cmd_combined]" } }
+  if ([zeek_smb_cmd]) {
+    ruby {
+      # action = command:sub_command
+      id => "ruby_zeek_smb_cmd_generate_action"
+      code => "
+        actions = Array.new unless (actions = event.get('[zeek][action]'))
+        actions.append([event.get('[zeek_smb_cmd][command]'),
+                        event.get('[zeek_smb_cmd][sub_command]')].compact.join(':'))
+        event.set('[zeek][action]', actions)"
+    }
   }
 
   if ([zeek_smb_files][action])                 { mutate { id => "mutate_merge_normalize_zeek_smb_files_action"
                                                            merge => { "[zeek][action]" => "[zeek_smb_files][action]" } } }
+
+  if ([zeek_sip][method])                       { mutate { id => "mutate_merge_normalize_zeek_sip_method"
+                                                           merge => { "[zeek][action]" => "[zeek_sip][method]" } } }
 
   if ([zeek_tds][command])                      { mutate { id => "mutate_merge_normalize_zeek_tds_command"
                                                            merge => { "[zeek][action]" => "[zeek_tds][command]" } } }
