--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -1797,7 +1797,7 @@ filter {
              gsub => [ "[zeek_cols][version]", "^SMB", "" ] }
 
     mutate { id => "mutate_gsub_zeek_smb_cmd_command"
-             gsub => [ "[zeek_cols][command]", "SMB::", "" ] }
+             gsub => [ "[zeek_cols][command]", "^SMB::", "" ] }
 
   } else if ([source] == "smb_files") {
     #############################################################################################################################
@@ -1875,7 +1875,7 @@ filter {
     }
 
     mutate { id => "mutate_gsub_zeek_smb_files_action"
-             gsub => [ "[zeek_cols][action]", "SMB::", "" ] }
+             gsub => [ "[zeek_cols][action]", "^SMB::", "" ] }
 
   } else if ([source] == "smb_mapping") {
     #############################################################################################################################
@@ -3325,6 +3325,9 @@ filter {
           mutate { id => "mutate_remove_zeek_smb_files_fuid"
                    remove_field => [ "[zeek_smb_files][fuid]" ] }
         }
+
+        if ([zeek_smb_files][action]) { mutate { id => "mutate_gsub_zeek_smb_cmd_referenced_file_action"
+                                                 gsub => [ "[zeek_smb_files][action]", "^SMB::", "" ] } }
 
         # this timestamp conversion would have happened originally had this been its own line from smb_files
         if ([zeek_smb_files][ts]) {
