remove useless prefix before smb action

--- a/logstash/pipelines/zeek/12_zeek_normalize.conf
+++ b/logstash/pipelines/zeek/12_zeek_normalize.conf
@@ -144,9 +144,10 @@ filter {
       # action = command:sub_command
       id => "ruby_zeek_smb_cmd_generate_action"
       code => "
+        cmd = event.get('[zeek_smb_cmd][command]')
+        subCmd = event.get('[zeek_smb_cmd][sub_command]')
         actions = Array.new unless (actions = event.get('[zeek][action]'))
-        actions.append([event.get('[zeek_smb_cmd][command]'),
-                        event.get('[zeek_smb_cmd][sub_command]')].compact.join(':'))
+        actions.append((cmd =~ /^\s*transaction\d*\s*$/i) ? subCmd : [cmd, subCmd].compact.join(':'))
         event.set('[zeek][action]', actions)"
     }
   }
