--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -230,7 +230,7 @@ filter {
               scoresTmp = Array.new
               begin
                 event.get('[dns][host]').each { |query|
-                  if (query.length >= 4) then
+                  if (query.length >= 4) and (query !~ /(ip6\.int|ip6\.arpa|in-addr\.arpa|b32\.i2p)$/i) then
                     scoresTmp.clear
                     scoresTmp.concat(Net::HTTP.get_response(URI.parse('http://freq:10004/measure/' + query)).body.gsub(/(^\(|\)$|\s+)/, '').split(',').map(&:to_f))
                     if (scoresTmp.length == 2) then
