remove tunnel:: prefix from tunnel type

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -2331,6 +2331,13 @@ filter {
       }
     }
 
+
+    mutate { id => "mutate_gsub_zeek_tunnel_action"
+             gsub => [ "[zeek_cols][action]", "Tunnel::", "" ] }
+
+    mutate { id => "mutate_gsub_zeek_tunnel_type"
+             gsub => [ "[zeek_cols][tunnel_type]", "Tunnel::", "" ] }
+
     mutate {
       id => "mutate_add_fields_zeek_tunnel"
       add_field =>  { "[zeek_cols][service]" => "%{[zeek_cols][tunnel_type]}" }
@@ -2338,10 +2345,6 @@ filter {
 
     mutate { id => "mutate_lowercase_zeek_tunnel_service"
              lowercase => [ "[zeek_cols][service]" ] }
-    mutate { id => "mutate_gsub_zeek_tunnel_service"
-             gsub => [ "[zeek_cols][service]", "tunnel::", "" ] }
-    mutate { id => "mutate_gsub_zeek_tunnel_action"
-             gsub => [ "[zeek_cols][action]", "Tunnel::", "" ] }
 
   } else if ([source] == "weird") {
     #############################################################################################################################
