--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -133,6 +133,16 @@ filter {
         }
       }
     }
+    cidr {
+      id      => "cidr_detect_network_type_ipv4_source"
+      add_field => { "[network][type]" => "ipv4" }
+      address => [ "%{srcIp}" ]
+      network => [ "0.0.0.0/0" ]
+    }
+    if (![network][type]) {
+      mutate { id => "mutate_add_network_type_ipv4_source"
+               add_field => { "[network][type]" => "ipv6" } }
+    }
   } # if ([srcIp])
 
   if ([dstIp]) {
@@ -197,7 +207,18 @@ filter {
           }
         }
       }
-
+    }
+    if (![network][type]) {
+      cidr {
+        id      => "cidr_detect_network_type_ipv4_dest"
+        add_field => { "[network][type]" => "ipv4" }
+        address => [ "%{dstIp}" ]
+        network => [ "0.0.0.0/0" ]
+      }
+      if (![network][type]) {
+        mutate { id => "mutate_add_network_type_ipv4_dest"
+                 add_field => { "[network][type]" => "ipv6" } }
+      }
     }
   } # if ([dstIp])
 
