--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -142,7 +142,6 @@ http {
       proxy_set_header Host kibana.malcolm.local;
     }
 
-
     # already prepended /kibana to match the server.basePath in kibana's YML config file
     location /kibana {
       proxy_pass http://docker-kibana;
@@ -153,6 +152,13 @@ http {
     # otherwise (from old kibana bookmarks), prepend /kibana to match the server.basePath in kibana's YML config file
     location /app {
       proxy_pass http://docker-kibana/kibana/app;
+      proxy_redirect off;
+      proxy_set_header Host kibana.malcolm.local;
+    }
+
+    # offline region maps for kibana
+    location /world.geojson {
+      proxy_pass http://docker-kibana-maps;
       proxy_redirect off;
       proxy_set_header Host kibana.malcolm.local;
     }
