--- a/kibana/supervisord.conf
+++ b/kibana/supervisord.conf
@@ -30,7 +30,7 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:maps]
-command=/usr/bin/http-server /opt/maps --cors='*' -p %(ENV_KIBANA_OFFLINE_REGION_MAPS_PORT)s
+command=/usr/bin/http-server /opt/maps --cors='*' -d false -i false --no-dotfiles -p %(ENV_KIBANA_OFFLINE_REGION_MAPS_PORT)s
 user=kibana
 autostart=%(ENV_KIBANA_OFFLINE_REGION_MAPS)s
 startsecs=0
