ignore logs that have been renamed and are in transit being archived

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -2401,22 +2401,30 @@ filter {
                             "[certCnt]" => "1" } }
 
   } else {
-    # some other unknown zeek log file. should start with ts at least!
-    csv {
-      id => "csv_zeek_unknown"
-      columns => [
-        "ts"]
 
-      # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
-      separator => "	"
-      # there's no way to *disable* the csv quote char, so set it to something we'll never see
-      quote_char => ""
+    if ([source] =~ /\.\d{4}-\d{2}-\d{2}-\d{2}-\d{2}-\d{2}$/) {
+      # filebeat caught a file right in the middle of being renamed/moved (ie., renamed from conn.log to
+      # conn.2020-01-16-14-00-00.log). this has actually already been processed, so ignore this event.
+      drop { id => "drop_renamed_logfile" }
 
-      target => "[zeek_cols]"
+    } else {
+      # some other unknown zeek log file. should start with ts at least!
+      csv {
+        id => "csv_zeek_unknown"
+        columns => [
+          "ts"]
+
+        # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
+        separator => "	"
+        # there's no way to *disable* the csv quote char, so set it to something we'll never see
+        quote_char => ""
+
+        target => "[zeek_cols]"
+      }
+
+      mutate { id => "mutate_add_tag_zeek_unknown"
+               add_tag => [ "_unknown_log_type" ] }
     }
-
-    mutate { id => "mutate_add_tag_zeek_unknown"
-             add_tag => [ "_unknown_log_type" ] }
 
   } # if / else if for source type (conn.log, dns.log, etc.)
 
