working with es 7.6, but elastalert had to be temporarily disabled. will work on fixing this next

--- a/kibana/kibana-offline-maps.yml
+++ b/kibana/kibana-offline-maps.yml
@@ -8,8 +8,8 @@ server.rewriteBasePath: true
 elasticsearch.hosts: ["${ELASTICSEARCH_URL}"]
 elasticsearch.requestTimeout: 180000
 kibana.defaultAppId: "dashboard/${KIBANA_DEFAULT_DASHBOARD}"
-elastalert-kibana-plugin.serverHost: elastalert
-elastalert-kibana-plugin.serverPort: 3030
+# elastalert-kibana-plugin.serverHost: elastalert
+# elastalert-kibana-plugin.serverPort: 3030
 
 # offline region map
 map.regionmap:
