--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -392,7 +392,7 @@ filter {
             id => "dissect_zeek_dhcp_1_with_all_fields"
             # zeek's default delimiter is a literal tab, MAKE SURE YOUR EDITOR DOESN'T SCREW IT UP
             mapping => {
-              "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uids]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][orig_l2_addr]}	%{[zeek_cols][host_name]}	%{[zeek_cols][client_fqdn]}	%{[zeek_cols][domain]}	%{[zeek_cols][requested_ip]}	%{[zeek_cols][assigned_ip]}	%{[zeek_cols][lease_time]}	%{[zeek_cols][client_message]}	%{[zeek_cols][server_message]}	%{[zeek_cols][msg_types]}	%{[zeek_cols][duration]}"
+              "[message]" => "%{[zeek_cols][ts]}	%{[zeek_cols][uid]}	%{[zeek_cols][orig_h]}	%{[zeek_cols][resp_h]}	%{[zeek_cols][orig_l2_addr]}	%{[zeek_cols][host_name]}	%{[zeek_cols][client_fqdn]}	%{[zeek_cols][domain]}	%{[zeek_cols][requested_ip]}	%{[zeek_cols][assigned_ip]}	%{[zeek_cols][lease_time]}	%{[zeek_cols][client_message]}	%{[zeek_cols][server_message]}	%{[zeek_cols][msg_types]}	%{[zeek_cols][duration]}"
             }
           }
 
@@ -422,18 +422,18 @@ filter {
       }
       ruby {
         id => "ruby_zip_zeek_dhcp"
-        init => "$zeek_dhcp_field_names = [ 'ts', 'uids', 'orig_h', 'resp_h', 'orig_l2_addr', 'host_name', 'client_fqdn', 'domain', 'requested_ip', 'assigned_ip', 'lease_time', 'client_message', 'server_message', 'msg_types', 'duration' ]"
+        init => "$zeek_dhcp_field_names = [ 'ts', 'uid', 'orig_h', 'resp_h', 'orig_l2_addr', 'host_name', 'client_fqdn', 'domain', 'requested_ip', 'assigned_ip', 'lease_time', 'client_message', 'server_message', 'msg_types', 'duration' ]"
         code => "event.set('[zeek_cols]', $zeek_dhcp_field_names.zip(event.get('[message]')).to_h)"
       }
     }
 
-    if ([zeek_cols][uids]) and ([zeek_cols][uids] != '(empty)') and ([zeek_cols][uids] != '') {
+    if ([zeek_cols][uid]) and ([zeek_cols][uid] != '(empty)') and ([zeek_cols][uid] != '') {
       mutate { id => "mutate_split_zeek_dhcp_uids"
-               split => { "[zeek_cols][uids]" => "," } }
+               split => { "[zeek_cols][uid]" => "," } }
     }
-    if ([zeek_cols][uids] and [zeek_cols][uids][0]) {
+    if ([zeek_cols][uid] and [zeek_cols][uid][0]) {
       mutate { id => "mutate_add_field_zeek_dhcp_uids"
-               add_field => { "[rootId]" => "%{[zeek_cols][uids][0]}" } }
+               add_field => { "[rootId]" => "%{[zeek_cols][uid][0]}" } }
     }
 
     if ((![zeek_cols][orig_p]) and (![zeek_cols][resp_p])) {
@@ -3075,6 +3075,20 @@ filter {
     mutate { id => "mutate_split_zeek_notice_actions"
              split => { "[zeek_notice][actions]" => "," } }
 
+    # split "Category::Subcategory" into two different fields
+    ruby {
+      id => "ruby_zeek_notice_category_extract"
+      code => "
+        if (noticeNote = event.get('[zeek_notice][note]')) and (noticeParts = noticeNote.split('::')) then
+          if (noticeParts.length >= 2) then
+            event.set('[zeek_notice][category]', noticeParts[0])
+            event.set('[zeek_notice][sub_category]', noticeParts[1])
+          elsif (noticeParts.length == 1) then
+            event.set('[zeek_notice][category]', noticeParts[0])
+          end
+        end"
+    }
+
   } else if ([source] == "ntp") {
     #############################################################################################################################
     # ntp.log specific logic
@@ -3204,6 +3218,10 @@ filter {
                merge => { "[radius][mac]" => "[zeek_radius][mac]" } }
       mutate { id => "mutate_add_field_radius_macCnt"
                add_field => { "[radius][macCnt]" => "1" } }
+      if (![zeek][orig_l2_addr]) {
+        mutate { id => "mutate_merge_zeek_radius_zeek_mac"
+                 merge => { "[zeek][orig_l2_addr]" => "[zeek_radius][mac]" } }
+      }
     }
 
   } else if ([source] == "rdp") {
