improvements to how notices can be used througout the other dashboards

--- a/logstash/pipelines/zeek/11_zeek_logs.conf
+++ b/logstash/pipelines/zeek/11_zeek_logs.conf
@@ -3089,6 +3089,27 @@ filter {
         end"
     }
 
+    if ([zeek_notice][category] == "ATTACK") and ([zeek_notice][msg] =~ /(from|against|to)\s+host/) {
+      # ATTACK::Discovery - Detected activity from host 192.168.199.133, total attempts 5 within timeframe 5.0 mins
+      # but no IP addresses set :(
+      if (![srcIp]) {
+        grok {
+          id => "grok_zeek_notice_attack_src_hosts"
+          match => { "[zeek_notice][msg]" => [ "from%{SPACE}host%{SPACE}%{DATA:[srcIp]}%{SPACE}($|[^\d:\.\w-]+)" ] }
+        }
+        if ([srcIp]) { mutate { id => "mutate_add_field_zeek_orig_h_attack"
+                                add_field => { "[zeek][orig_h]"   => "%{[srcIp]}" } } }
+      }
+      if (![dstIp]) {
+        grok {
+          id => "grok_zeek_notice_attack_dst_hosts"
+          match => { "[zeek_notice][msg]" => [ "(against|to)%{SPACE}host%{SPACE}%{DATA:[dstIp]}%{SPACE}($|[^\d:\.\w-]+)" ] }
+        }
+        if ([dstIp]) { mutate { id => "mutate_add_field_zeek_resp_h_attack"
+                                add_field => { "[zeek][resp_h]"   => "%{[dstIp]}" } } }
+      }
+    }
+
   } else if ([source] == "ntp") {
     #############################################################################################################################
     # ntp.log specific logic
