experimenting with creating a merged network.mac_oui field that looks like this:
...
    "network": {
      "type": "ipv4",
      "mac_oui": {
        "00:10:db:ff:10:01": "Juniper Networks",
        "8c:85:90:65:85:8f": "Apple, Inc."
      }
    },
...

however, I may revert this for now because although this works kibana does't really play nicely with the data in visualizations

--- a/logstash/pipelines/enrichment/11_lookups.conf
+++ b/logstash/pipelines/enrichment/11_lookups.conf
@@ -43,16 +43,7 @@ filter {
             add_field => { "[dhcp][ouiCnt]" => "%{[srcOuiCnt]}" }
           }
         }
-
-        # an aggregate field with both src/dst oui (for asset inventory)
-        mutate { id => "mutate_merge_field_combined_oui_src"
-                 merge => { "[network][oui]" => "[zeek][orig_l2_oui]" } }
       }
-
-      # an aggregate field with both src/dst mac (for asset inventory)
-      mutate { id => "mutate_merge_field_combined_mac_src"
-               merge => { "[network][mac]" => "[srcMac]" } }
-
     } # end if [srcMac]
 
     if ([dstMac]) and ([dstMac][0]) {
@@ -73,33 +64,29 @@ filter {
                  merge => { "[dstOui]" => "[zeek][resp_l2_oui]" } }
         mutate { id => "mutate_add_field_dstOuiCnt"
                  add_field => { "[dstOuiCnt]" => "1" } }
-
-        # an aggregate field with both src/dst oui (for asset inventory)
-        mutate { id => "mutate_merge_field_combined_oui_dst"
-                 merge => { "[network][oui]" => "[zeek][resp_l2_oui]" } }
       }
-
-      # an aggregate field with both src/dst mac (for asset inventory)
-      mutate { id => "mutate_merge_field_combined_mac_dst"
-               merge => { "[network][mac]" => "[dstMac]" } }
-
     } # end if [dstMac]
 
-    # deduplicate and clean up network.mac/network.oui
-    if ([network][mac]) {
-      ruby {
-        id => "ruby_network_mac_uniq"
-        code => "event.set('[network][mac]', (event.get('[network][mac]').map(&:downcase).uniq - ['ff:ff:ff:ff:ff:ff']))"
-      }
-    }
-    if ([network][oui]) {
-      ruby {
-        id => "ruby_network_oui_uniq"
-        code => "event.set('[network][oui]', event.get('[network][oui]').uniq)"
-      }
-    }
-
   } # end if ENV_LOGSTASH_OUI_LOOKUP
+
+
+  if ([dstMac]) or ([srcMac]) {
+    ruby {
+      id => "ruby_src_dst_mac_combine"
+      code => "
+        macMap = Hash.new
+        if (srcMacs = event.get('[srcMac]')) and (srcMacs.length > 0) and (srcMac = srcMacs[0]) and (srcMac != 'ff:ff:ff:ff:ff:ff') then
+          srcOui = 'unknown' unless (srcOui = event.get('[zeek][orig_l2_oui]'))
+          macMap[srcMac] = srcOui
+        end
+        if (dstMacs = event.get('[dstMac]')) and (dstMacs.length > 0) and (dstMac = dstMacs[0]) and (dstMac != 'ff:ff:ff:ff:ff:ff') then
+          dstOui = 'unknown' unless (dstOui = event.get('[zeek][resp_l2_oui]'))
+          macMap[dstMac] = dstOui
+        end
+      event.set('[network][mac_oui]', macMap) unless (macMap.length == 0)"
+    }
+  }
+
   ################################################################################################
 
   ######## IP address class tagging, GeoIP/ASN lookups, and reverse DNS###########################
