--- a/malcolm-iso/config/includes.binary/boot/grub/grub.cfg
+++ b/malcolm-iso/config/includes.binary/boot/grub/grub.cfg
@@ -39,6 +39,11 @@ menuentry "Install Malcolm Base (advanced configuration)" {
   initrd  /install/initrd.gz
 }
 
+menuentry "Install Malcolm Base (virtual machine single partition quick install)" {
+  linux /install/vmlinuz auto=true priority=high vga=normal locales=en_US.UTF-8 keyboard-layouts=us preseed/file=/cdrom/install/preseed_vmware.cfg
+  initrd  /install/initrd.gz
+}
+
 menuentry "Rescue system in text mode" {
   linux /install/vmlinuz rescue/enable=true vga=normal
   initrd  /install/initrd.gz
