updating sensor-iso to match malcolm-iso

--- a/sensor-iso/config/includes.binary/boot/grub/grub.cfg
+++ b/sensor-iso/config/includes.binary/boot/grub/grub.cfg
@@ -46,6 +46,11 @@ menuentry "Install Hedgehog Linux (advanced configuration)" {
   initrd  /install/initrd.gz
 }
 
+menuentry "Install Hedgehog Linux (virtual machine single partition quick install)" {
+  linux /install/vmlinuz auto=true priority=critical vga=normal locales=en_US.UTF-8 keyboard-layouts=us preseed/file=/cdrom/install/preseed_vmware.cfg
+  initrd  /install/initrd.gz
+}
+
 menuentry "Rescue system in text mode" {
   linux /install/vmlinuz rescue/enable=true vga=normal
   initrd  /install/initrd.gz
