--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -98,7 +98,17 @@ http {
     location /upload {
       proxy_http_version 1.1;
       proxy_set_header Connection "";
-      proxy_pass http://docker-upload;
+      proxy_pass http://docker-upload/;
+      proxy_redirect off;
+      proxy_set_header Host upload.malcolm.local;
+      proxy_request_buffering off;
+      proxy_buffering off;
+      client_max_body_size 20G;
+    }
+    location /server/php {
+      proxy_http_version 1.1;
+      proxy_set_header Connection "";
+      proxy_pass http://docker-upload/server/php/;
       proxy_redirect off;
       proxy_set_header Host upload.malcolm.local;
       proxy_request_buffering off;
